@@ -1,3 +1,7 @@
+19990529-19:45 CET Eddie Runia
+  * tests/working/run_exp.h
+    hb_f* functions added
+
 19990529-10:04 EST Les Griffith
   * Files.c defined out scandir on djgpp
   * Set.c added include errno.h for djgpp
